PUB-1739 Remove Code Smells (#135)
* PUB-1678 Java 17 upgrade (#131)

* Upgraded to java 17

* remove ns from test asserts

* Checkstyle updates and refactor to make use of new 17 features

* Vulns

* Updated suppressions + spring (#132)

* Updated suppressions + spring

* Updated suppressions

* PUB-1637 Delete Court (#118)

* add endpoint to get subscription for a location

* add not found exception

* Added functional tests for the end point FindSubscriptionsByLocationId

Co-authored-by: ChrisS1512 <87066931+ChrisS1512@users.noreply.github.com>
Co-authored-by: ashwini.venkatesha <ashwini.venkatesha@justice.gov.uk>

* fix code smells

* fix code smells

Co-authored-by: Josh <joshblackmoor@users.noreply.github.com>
Co-authored-by: ChrisS1512 <87066931+ChrisS1512@users.noreply.github.com>
Co-authored-by: ashwini.venkatesha <ashwini.venkatesha@justice.gov.uk>